--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(LuQulc)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(LuQulc main.cpp /home/tester/CLionProjects/SandBoxQ/MyLib3.cpp Translate.cpp TreeLung.cpp)
+add_executable(LuQulc main.cpp /home/tester/CLionProjects/SandBoxQ/MyLib3.cpp Translate.cpp TreeLung.cpp BasedFunc.cpp BasedFunc.h)
